column Align issue

--- a/css/app.css
+++ b/css/app.css
@@ -349,3 +349,7 @@ table{
 	margin-right:8px; 
 	margin-top:3px;
 }
+
+.leftAlign{
+padding-left:0px; 
+} 
